<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="10px"
	android:orientation="vertical">

 	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:padding="10px"
 		android:orientation="vertical">
 		
 		<TextView android:id="@+id/labelTrackList"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="@string/textTrackList"
			android:textStyle="bold" />
	</LinearLayout>
	
	<TableLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:stretchColumns="0">
		
		<TableRow android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			
			<ListView android:id="@+id/listTrackList"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:choiceMode="singleChoice">
				android:layout_span="1"
			</ListView>

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:layout_span="1"
 		android:orientation="vertical">
		<Button android:id="@+id/buttonTrackListLoad"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/textLoad" />
				
		<Button android:id="@+id/buttonTrackListUpLoad"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/textUpLoad" />
		
		<Button android:id="@+id/buttonTrackListDelete"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/textDelete" />

		<Button android:id="@+id/buttonTrackListCancel"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/textCancel" />
		</LinearLayout>
		</TableRow>
	</TableLayout>
</LinearLayout>